# cpp

./: README.md
package_make/: CMakeLists.txt  README.md  myapp.cpp
package_make/mylib/: CMakeLists.txt
package_make/mylib/Install/include/: mylib.h
package_make/mylib/Install/lib/cmake/mylib/: mylib-config-noconfig.cmake
package_make/mylib/src/: mylib.cpp
socket/: socket_client  socket_client.cpp  socket_server  socket_server.cpp
